--- a/pond.html
+++ b/pond.html
@@ -49,7 +49,7 @@
     <div id="pond"></div>
 
     <script>
-      let host = "https://lab6-latest-8fdh.onrender.com/";
+      let host = "https://lab6-latest-8fdh.onrender.com";
       let ducks = [];
       displayTheDucks();
 
