--- a/search.html
+++ b/search.html
@@ -43,7 +43,7 @@
 
     <script>
       let ducks = [];
-      let host = "https://lab6-latest-8fdh.onrender.com/";
+      let host = "https://lab6-latest-8fdh.onrender.com";
 
       async function getAll() {
         return fetch(host + "/ducks")
